--- a/rest-api-java-springboot/src/main/resources/application.yml
+++ b/rest-api-java-springboot/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: rest-api-java-springboot
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/rest_api_java_springboot?useTimezone=true&serverTimezone=
     username: root
     password: admin123
