--- a/rest-api-java-springboot/src/main/resources/application.yml
+++ b/rest-api-java-springboot/src/main/resources/application.yml
@@ -13,5 +13,5 @@ spring:
     open-in-view: false
 logging:
   level:
-    # root: WARN
-    com.pauloCiv: DEBUG
+    root: INFO
+    # com.pauloCiv: DEBUG
