--- a/rest-api-java-springboot/src/main/resources/application.yml
+++ b/rest-api-java-springboot/src/main/resources/application.yml
@@ -15,3 +15,7 @@ logging:
   level:
     root: INFO
     # com.pauloCiv: DEBUG
+spring-doc:
+  paths-to-match: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
