--- a/rest-api-java-springboot/pom.xml
+++ b/rest-api-java-springboot/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>21</java.version>
 		<dozer.version>7.0.0</dozer.version>
 		<springdoc.version>2.7.0</springdoc.version>
+		<testcontainers.version>1.21.0</testcontainers.version>
 	</properties>
 
 	<dependencies>
@@ -78,6 +79,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mysql</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+<!--			<version>5.5.5</version>-->
 			<scope>test</scope>
 		</dependency>
 
