--- a/rest-api-java-springboot/src/test/resources/application.yml
+++ b/rest-api-java-springboot/src/test/resources/application.yml
@@ -1,1 +1,20 @@
-spring.application.name=rest-api-java-springboot
+server:
+  port: 8888
+spring:
+  application:
+    name: rest-api-java-springboot
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: false
+    open-in-view: false
+logging:
+  level:
+    root: INFO
+    # com.pauloCiv: DEBUG
+spring-doc:
+  paths-to-match: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
