--- a/rest-api-java-springboot/src/test/resources/application-test.yml
+++ b/rest-api-java-springboot/src/test/resources/application-test.yml
@@ -1,21 +1,34 @@
 server:
   port: 8888
+
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000,https://www.erudio.com.br
+
 spring:
   application:
     name: rest-api-java-springboot
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/rest_api_java_springboot?useTimezone=true&serverTimezone=UTC
+#    username: root
+#    password: admin123
   jpa:
     hibernate:
       ddl-auto: none
     show-sql: false
     open-in-view: false
+  flyway:
+#    url: jdbc:postgresql://localhost:5432/rest_api_java_springboot?useTimezone=true&serverTimezone=UTC
+#    user: root
+#    password: admin123
+    enabled: true
+    locations: classpath:db/migration/test
+
 logging:
   level:
     root: INFO
     # com.pauloCiv: DEBUG
+
 spring-doc:
   paths-to-match: /api/**/v1/**
   swagger-ui:
